--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="navigation">
         <ul class="nav-list">
-            <li><a href="#homepage">Home</a></li>
+            <li><a href="#homepage">Hommmme</a></li>
             <li><a href="#productspage">Our Products</a></li>
             <li><a href="#calculatepage">Calculate</a></li>
             <li><a href="contact.html">Contact</a></li>
