--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <main class="main">
         <div class="main_item">
             <h1 class="main_title">Nabha Gold</h1>
-            <p class="main_text">All jewerlies made with love for each person</p>
+            <p class="main_text">All jewellery made with love for each person</p>
             <a href="#calculatepage" class="link">Calculate and order</a>
         </div>
         <div class="main_images">
