--- a/index.html
+++ b/index.html
@@ -10,6 +10,39 @@
 
   gtag('config', 'G-3C0T7EPCXT');
 </script>
+
+    <!-- Tracking Calculate and order button clicks -->
+<script>
+document.getElementById("btnProduct").addEventListener("click", function() {
+  gtag('event', 'click', {
+    'event_category': 'Button Click',
+    'event_label': 'Calculate and Order',
+  });
+});
+</script>
+
+<!--Tracking the email link click event-->
+<script>
+document.querySelector(".total_email").addEventListener("click", function() {
+  gtag('event', 'click', {
+    'event_category': 'Email Link Click',
+    'event_label': 'rajpunith469@gmail.com',
+  });
+});
+</script>
+
+<!--Tracking navigation bar clicks-->
+<script>
+document.querySelectorAll(".nav-list a").forEach(function(link) {
+  link.addEventListener("click", function(event) {
+    gtag('event', 'click', {
+      'event_category': 'Navigation Click',
+      'event_label': event.target.textContent,
+    });
+  });
+});
+</script>
+    
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
