--- a/contact.html
+++ b/contact.html
@@ -119,12 +119,32 @@
     </style>
 </head>
 <body>
-    <div class="navigation">
+   <div class="navigation">
         <ul class="nav-list">
-            <li><a href="index.html#homepage">Home</a></li>
-            <li><a href="index.html#productspage">Our Products</a></li>
-            <li><a href="index.html#calculatepage">Calculate</a></li>
+            <li><a href="#homepage">Home</a></li>
+            <script>
+  document.getElementById("productLink").addEventListener("click", function() {
+    gtag('event', 'home_click');
+  });
+</script>
+            <li><a href="#productspage">Our Products</a></li> 
+            <script>
+  document.getElementById("productLink").addEventListener("click", function() {
+    gtag('event', 'ourproduct_click');
+  });
+</script>
+            <li><a href="#calculatepage">Calculate</a></li>
+               <script>
+  document.getElementById("productLink").addEventListener("click", function() {
+    gtag('event', 'calculatepage_click');
+  });
+</script>
             <li><a href="contact.html">Contact</a></li>
+               <script>
+  document.getElementById("productLink").addEventListener("click", function() {
+    gtag('event', 'contact_click');
+  });
+</script>
         </ul>
     </div>
     <div class="contact-container">
