--- a/contact.html
+++ b/contact.html
@@ -121,19 +121,19 @@
 <body>
    <div class="navigation">
         <ul class="nav-list">
-            <li><a href="#homepage">Home</a></li>
+            <li><a href="index.html#homepage">Home</a></li>
             <script>
   document.getElementById("productLink").addEventListener("click", function() {
     gtag('event', 'home_click');
   });
 </script>
-            <li><a href="#productspage">Our Products</a></li> 
+            <li><a href="index.html#productspage">Our Products</a></li>
             <script>
   document.getElementById("productLink").addEventListener("click", function() {
     gtag('event', 'ourproduct_click');
   });
 </script>
-            <li><a href="#calculatepage">Calculate</a></li>
+            <li><a href="index.html#calculatepage">Calculate</a></li>
                <script>
   document.getElementById("productLink").addEventListener("click", function() {
     gtag('event', 'calculatepage_click');
