--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             </form>
             <script>
   document.getElementById("btnProduct").addEventListener("click", function() {
-    gtag('event', 'Calcul_click');
+    gtag('event', 'Calculate_click');
   });
 </script>
             <div id="infoProduct" class="total" style="display:none;">
