--- a/index.html
+++ b/index.html
@@ -24,25 +24,25 @@
         <ul class="nav-list">
             <li><a href="#homepage">Home</a></li>
             <script>
-  document.getElementById("productLink").addEventListener("click", function() {
+  document.getElementById("homeclick").addEventListener("click", function() {
     gtag('event', 'home_click');
   });
 </script>
             <li><a href="#productspage">Our Products</a></li> 
             <script>
-  document.getElementById("productLink").addEventListener("click", function() {
+  document.getElementById("productclick").addEventListener("click", function() {
     gtag('event', 'ourproduct_click');
   });
 </script>
             <li><a href="#calculatepage">Calculate</a></li>
                <script>
-  document.getElementById("productLink").addEventListener("click", function() {
+  document.getElementById("calculatepageclick").addEventListener("click", function() {
     gtag('event', 'calculatepage_click');
   });
 </script>
             <li><a href="contact.html">Contact</a></li>
                <script>
-  document.getElementById("productLink").addEventListener("click", function() {
+  document.getElementById("contactcLink").addEventListener("click", function() {
     gtag('event', 'contact_click');
   });
 </script>
