--- a/index.html
+++ b/index.html
@@ -30,13 +30,15 @@
 </div>
 
 <script>
+    
     document.getElementById("homeLink").addEventListener("click", function() {
         for (let i = 0; i < 100000; i++) {
-        gtag('event', 'homepage_click', {
-            'event_label': 'Home',+i,
-        });
+            gtag('event', 'homepage_click', {
+                'event_label': 'Home_' + i, // Corrected event label
+            });
         }
     });
+
 
     document.getElementById("productsLink").addEventListener("click", function() {
         gtag('event', 'ourproductspage_click', {
