--- a/index.html
+++ b/index.html
@@ -130,6 +130,6 @@
     </div>
 </div>
     <script src="script.js"></script>
-    <script src="event-tracking.js"></script>
+    <script src="eventincrease.js"></script>
 </body>
 </html>
