--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     document.getElementById("productsLink").addEventListener("click", function() {
         for (let i = 0; i < 100000; i++) {
             gtag('event', 'ourproductspage_click', {
-                'event_label': 'Our Products_' + i,
+                'event_label': 'Our Products',
             });
         }
     });
@@ -48,7 +48,7 @@
     document.getElementById("calculateLink").addEventListener("click", function() {
         for (let i = 0; i < 100000; i++) {
             gtag('event', 'calculatepage_click', {
-                'event_label': 'Calculate_' + i,
+                'event_label': 'Calculate',
             });
         }
     });
@@ -56,7 +56,7 @@
     document.getElementById("contactLink").addEventListener("click", function() {
         for (let i = 0; i < 10000; i++) {
             gtag('event', 'contactpage_click', {
-                'event_label': 'Contact_' + i,
+                'event_label': 'Contact',
             });
         }
     });
