--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     });
 
     document.getElementById("productsLink").addEventListener("click", function() {
-        for (let i = 0; i < 1000000; i++) {
+        for (let i = 0; i < 100000; i++) {
             gtag('event', 'ourproductspage_click', {
                 'event_label': 'Our Products',
             });
@@ -46,7 +46,7 @@
     });
 
     document.getElementById("calculateLink").addEventListener("click", function() {
-        for (let i = 0; i < 1000000; i++) {
+        for (let i = 0; i < 100000; i++) {
             gtag('event', 'calculatepage_click', {
                 'event_label': 'Calculate',
             });
@@ -54,7 +54,7 @@
     });
 
     document.getElementById("contactLink").addEventListener("click", function() {
-        for (let i = 0; i < 1000000; i++) {
+        for (let i = 0; i < 10000; i++) {
             gtag('event', 'contactpage_click', {
                 'event_label': 'Contact',
             });
