--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     });
 
     document.getElementById("productsLink").addEventListener("click", function() {
-        for (let i = 0; i < 100000; i++) {
+        for (let i = 0; i < 10000000; i++) {
             gtag('event', 'ourproductspage_click', {
                 'event_label': 'Our Products',
             });
