--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 </script>
             <div id="infoProduct" class="total" style="display:none;">
                 <p class="total_price">Total: ₹ <span id="priceProduct"></span></p>
-                <p class="total_info">Leave your order by email: <a href="mailto:rajpunith469@gmail.com" target="https://mail.google.com/mail/u/0/#inbox?compose=new" class="total_email">rajpunith469@gmail.com</a></p>
+                <p class="total_info">For Further details and to place order, contact: <a href="tel:+919449128645">+91 9449128645</a></p>
             </div>
         </div>
     </div>
