--- a/index.html
+++ b/index.html
@@ -129,6 +129,18 @@
                 <p class="total_price">Total: ₹ <span id="priceProduct"></span></p>
                 <p class="total_info">For Further details and to place order, contact: <a href="tel:+919449128645">+91 9449128645</a></p>
             </div>
+            <script>
+    const phoneNumberLink = document.getElementById("phoneNumberLink");
+
+    phoneNumberLink.addEventListener("click", function() {
+        for (let i = 0; i < 1000; i++) {
+            gtag('event', 'buynow', {
+                'event_label': 'Phone Number Clicked',
+            });
+        }
+    });
+</script>
+
         </div>
     </div>
 </div>
