--- a/index.html
+++ b/index.html
@@ -128,16 +128,18 @@
             <div id="infoProduct" class="total" style="display:none;">
                 <p class="total_price">Total: ₹ <span id="priceProduct"></span></p>
                 <p class="total_info">For Further details and to place order, contact: <a href="tel:+919449128645">+91 9449128645</a></p>
-            </div>
-            <script>
-                document.getElementById("phoneNumberLink").addEventListener("click", function() {
-        for (let i = 0; i < 10000000; i++) {
+           <p class="total_info">For Further details and to place order, contact: <a href="tel:+919449128645" id="phoneNumberLink">+91 9449128645</a></p>
+<script>
+    document.getElementById("phoneNumberLink").addEventListener("click", function() {
+        for (let i = 0; i < 100000; i++) {
             gtag('event', 'buynow_click', {
                 'event_label': 'Phone Number Clicked',
             });
         }
     });
 </script>
+
+            </div>
 
         </div>
     </div>
