--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     });
 
     document.getElementById("calculateLink").addEventListener("click", function() {
-        for (let i = 0; i < 100000; i++) {
+        for (let i = 0; i < 1000000; i++) {
             gtag('event', 'calculatepage_click', {
                 'event_label': 'Calculate',
             });
