--- a/index.html
+++ b/index.html
@@ -78,20 +78,29 @@
     </main>
     <section class="products" id="productspage">
         <h2 class="title-h2">Our products</h2>
-        <div class="grid">
-            <div class="grid_cover">
-                <img src="https://images.unsplash.com/photo-1608508644127-ba99d7732fee?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mzh8fGpld2Vscnl8ZW58MHx8MHx8&auto=format&fit=crop&w=600&q=60" alt="">
-            </div>
-            <div class="grid_cover">
-                <img src="https://images.unsplash.com/photo-1625792508553-5e66a81659fa?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1yZWxhdGVkfDN8fHxlbnwwfHx8fA%3D%3D&auto=format&fit=crop&w=600&q=60" alt="">
-            </div>
-            <div class="grid_cover">
-                <img src="https://images.unsplash.com/photo-1631965004544-1762fc696476?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTR8fGpld2VsbGVyeXxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=600&q=60" alt="">
-            </div>
-            <div class="grid_cover">
-                <img src="https://images.unsplash.com/photo-1599458349289-18f0ee82e6ed?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTh8fGpld2Vscnl8ZW58MHx8MHx8&auto=format&fit=crop&w=600&q=60" alt="">
-            </div>
-        </div>
+      <div class="grid">
+    <div class="grid_cover">
+        <a href="URL_of_your_choice">
+            <img src="https://images.unsplash.com/photo-1608508644127-ba99d7732fee?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mzh8fGpld2Vscnl8ZW58MHx8MHx8&auto=format&fit=crop&w=600&q=60" alt="">
+        </a>
+    </div>
+    <div class="grid_cover">
+        <a href="URL_of_your_choice">
+            <img src="https://images.unsplash.com/photo-1625792508553-5e66a81659fa?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1yZWxhdGVkfDN8fHxlbnwwfHx8fA%3D%3D&auto=format&fit=crop&w=600&q=60" alt="">
+        </a>
+    </div>
+    <div class="grid_cover">
+        <a href="URL_of_your_choice">
+            <img src="https://images.unsplash.com/photo-1631965004544-1762fc696476?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTR8fGpld2VsbGVyeXxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=600&q=60" alt="">
+        </a>
+    </div>
+    <div class="grid_cover">
+        <a href="URL_of_your_choice">
+            <img src="https://images.unsplash.com/photo-1599458349289-18f0ee82e6ed?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTh8fGpld2Vscnl8ZW58MHx8MHx8&auto=format&fit=crop&w=600&q=60" alt="">
+        </a>
+    </div>
+</div>
+
     </section>
     <div class="cost" id="calculatepage">
         <div class="cost_title">
