--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <h2 class="title-h2">Our products</h2>
       <div class="grid">
     <div class="grid_cover">
-        <a href="URL_of_your_choice">
+        <a href="https://images.unsplash.com/photo-1608508644127-ba99d7732fee?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mzh8fGpld2Vscnl8ZW58MHx8MHx8&auto=format&fit=crop&w=600&q=60" alt="">
             <img src="https://images.unsplash.com/photo-1608508644127-ba99d7732fee?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mzh8fGpld2Vscnl8ZW58MHx8MHx8&auto=format&fit=crop&w=600&q=60" alt="">
         </a>
     </div>
